# PhoneBook

./: CMakeLists.txt  README.md
src/: addressmodel.cpp  addressmodel.h  config.h  contact.h  editdialog.cpp  editdialog.h  editdialog.ui  main.cpp  phonebookmanager.cpp  phonebookmanager.h  phonebookmanager.ui
